[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/WebLobby.gd" id="1_lobby"]

[node name="WebLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -280.0
offset_right = 200.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ONLINE PLAY"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Connect to play online"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CreateSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CreateLabel" type="Label" parent="VBoxContainer/CreateSection"]
layout_mode = 2
text = "HOST A GAME"
horizontal_alignment = 1

[node name="CreateButton" type="Button" parent="VBoxContainer/CreateSection"]
layout_mode = 2
size_flags_horizontal = 4
text = "Create Game"

[node name="GameCodeLabel" type="Label" parent="VBoxContainer/CreateSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "------"
horizontal_alignment = 1

[node name="CodeButtonsContainer" type="HBoxContainer" parent="VBoxContainer/CreateSection"]
layout_mode = 2
alignment = 1

[node name="CopyButton" type="Button" parent="VBoxContainer/CreateSection"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Copy Code"

[node name="ShareButton" type="Button" parent="VBoxContainer/CreateSection"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Share"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="JoinSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="JoinLabel" type="Label" parent="VBoxContainer/JoinSection"]
layout_mode = 2
text = "JOIN A GAME"
horizontal_alignment = 1

[node name="CodeInput" type="LineEdit" parent="VBoxContainer/JoinSection"]
layout_mode = 2
placeholder_text = "Enter 6-character code"
alignment = 1
max_length = 6
caret_blink = true

[node name="JoinButton" type="Button" parent="VBoxContainer/JoinSection"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Join Game"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ArmySection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ArmyLabel" type="Label" parent="VBoxContainer/ArmySection"]
layout_mode = 2
text = "ARMY SELECTION"
horizontal_alignment = 1

[node name="Player1Container" type="HBoxContainer" parent="VBoxContainer/ArmySection"]
layout_mode = 2

[node name="Player1Label" type="Label" parent="VBoxContainer/ArmySection/Player1Container"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "Player 1:"

[node name="Player1Dropdown" type="OptionButton" parent="VBoxContainer/ArmySection/Player1Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Player2Container" type="HBoxContainer" parent="VBoxContainer/ArmySection"]
layout_mode = 2

[node name="Player2Label" type="Label" parent="VBoxContainer/ArmySection/Player2Container"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "Player 2:"

[node name="Player2Dropdown" type="OptionButton" parent="VBoxContainer/ArmySection/Player2Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"

[node name="ConnectingIndicator" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Spinner" type="TextureProgressBar" parent="VBoxContainer/ConnectingIndicator"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
max_value = 360.0
value = 180.0
fill_mode = 4

[node name="Label" type="Label" parent="VBoxContainer/ConnectingIndicator"]
layout_mode = 2
text = "Connecting..."

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"
